2006-01-31  Luc Verhaegen  <libv@skynet.be>

	* hw/xfree86/common/xf86Mode.c: (xf86CheckModeForMonitor):

	Accept modes with less than 25% horizontal blanking again (you can
	push old gtf timing to below 25%), only stop cvt reduced blanking.
	Users should be free to blow up their monitors if they so choose.

2006-01-30  Donnie Berkholz  <spyderous@gentoo.org>

	* GL/mesa/shader/slang/Makefile.am:
	* GL/symlink-mesa.sh:
	Update to build against Mesa trunk.

2006-01-27  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/os-support/shared/libc_wrapper.c: (xf86random):
	* hw/xfree86/os-support/xf86_ansic.h:
	* hw/xfree86/os-support/xf86_libc.h:
	Add libc_wrapper support for random(), which will be used in upcoming
	EXA memory manager work.

2006-01-27  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xfree86/dixmods/Makefile.am:
	* hw/xgl/glx/Makefile.am:
	Remove leftover variables for cfb24 build, and finish commenting out
	Xglx standalone stuff, which some versions of automake get whiny about.

2006-01-27  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* hw/xfree86/scanpci/pci.ids:
	* hw/xfree86/scanpci/xf86PciStdIds.h:
	update pci ids

2006-01-25  Donnie Berkholz  <spyderous@gentoo.org>

	* GL/symlink-mesa.sh:
	Really allow linking against Mesa trunk to work.

2006-01-26  Daniel Stone  <daniel@freedesktop.org>

	* xorg-config.h.in:
	Add forgotten HAVE_BACKTRACE define.

2006-01-25  Adam Jackson  <ajax@freedesktop.org>

	* Makefile.am:
	* cfb24/Makefile.am:
	* cfb24/cfbrrop24.h:
	* configure.ac:
	* hw/xfree86/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/xf8_32wid/Makefile.am:
	* hw/xfree86/xf8_32wid/cfb8_32wid.h:
	* hw/xfree86/xf8_32wid/cfb8_32widmodule.c:
	* hw/xfree86/xf8_32wid/cfbscrinit.c:
	* hw/xfree86/xf8_32wid/cfbwid.c:
	* hw/xfree86/xf8_32wid/cfbwindow.c:
	Remove xf8_32wid, it's dead code with no maintainer interest.  Also
	remove cfb24, since xf8_32wid was the only user.

	* configure.ac:
	* Makefile.am:
	* ilbm/*:
	* iplan2p4/*: